--- a/index.html
+++ b/index.html
@@ -1,38 +1,11 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title>一城一购</title>
-		<link rel="stylesheet" href="plugin/layui/css/layui.css" />
-		<style>
-			.img100{height: 100%;}
-			.top{height: 50px;position: absolute;}
-			.lunbo div{}
-		</style>
+		<title>MainPage</title>
 	</head>
 	<body>
-		<div class="top"></div>
-		<div class="lunbo">
-			<div class="layui-carousel" id="test1">
-			  <div carousel-item style="text-align: center;vertical-align: middle;">
-			    <div><img class="img100" src="img/1.png"></div>
-			    <div><img class="img100" src="img/2.png"></div>
-			    <div><img class="img100" src="img/3.png"></div>
-			    <div><img class="img100" src="img/4.png"></div>
-			    <div><img class="img100" src="img/5.jpg"></div>
-			  </div>
-			</div>
+		<div style="text-align: center;">
+			<h1>Contact with us： <b style="color: #FF5722">hejoy91@qq.com</b> </h1>
 		</div>
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		<script src="plugin/jquery/jquery-3.3.1.min.js"></script>
-		<script src="plugin/layui/layui.all.js"></script>
-		<script src="js/index.js"></script>
 	</body>	
 </html>
